// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiIcon is rendered 1`] = `
<svg
  aria-label="aria-label"
  class="kuiIcon testClass1 testClass2 kuiIcon--medium"
  data-test-subj="test subject string"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders size large 1`] = `
<svg
  class="kuiIcon kuiIcon--large"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders size medium 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders size xLarge 1`] = `
<svg
  class="kuiIcon kuiIcon--xLarge"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders size xxLarge 1`] = `
<svg
  class="kuiIcon kuiIcon--xxLarge"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders type apps 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    apps icon
  </title>
  <use
    href="#apps"
  />
</svg>
`;

exports[`KuiIcon renders type dashboardApp 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    dashboard app icon
  </title>
  <use
    href="#app_dashboard"
  />
</svg>
`;

exports[`KuiIcon renders type devToolsApp 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    dev tools app icon
  </title>
  <use
    href="#app_devtools"
  />
</svg>
`;

exports[`KuiIcon renders type discoverApp 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    discover app icon
  </title>
  <use
    href="#app_discover"
  />
</svg>
`;

exports[`KuiIcon renders type graphApp 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    graph app icon
  </title>
  <use
    href="#app_graph"
  />
</svg>
`;

exports[`KuiIcon renders type kibanaLogo 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    kibana logo icon
  </title>
  <use
    href="#logo"
  />
</svg>
`;

exports[`KuiIcon renders type machineLearningApp 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    machine learning app icon
  </title>
  <use
    href="#app_ml"
  />
</svg>
`;

exports[`KuiIcon renders type search 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`KuiIcon renders type timelionApp 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    timelion app icon
  </title>
  <use
    href="#app_timelion"
  />
</svg>
`;

exports[`KuiIcon renders type user 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    user icon
  </title>
  <use
    href="#user"
  />
</svg>
`;

exports[`KuiIcon renders type visualizeApp 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    visualize app icon
  </title>
  <use
    href="#app_visualize"
  />
</svg>
`;

exports[`KuiIcon title defaults to a humanized version of the type 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    dashboard app icon
  </title>
  <use
    href="#app_dashboard"
  />
</svg>
`;

exports[`KuiIcon title is rendered 1`] = `
<svg
  class="kuiIcon kuiIcon--medium"
>
  <title>
    a custom title
  </title>
  <use
    href="#search"
  />
</svg>
`;
